tests/rosetta/out/Smalltalk/angles-geometric-normalization-and-conversion.out
/tmp/angles-geometric-normalization-and-conversion.st:22: parse error, expected ']'
